// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de el GifGrid Se debe cargar correctamente el GifGrid 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__rubberBand"
  >
    one punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
     Loading ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba de el GifGrid debe de mostrar items cuando se cargan imagenes useFechGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__rubberBand"
  >
    one punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http:s//localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
